Switch between dark mode and light mode and fix issues

--- a/frontend/src/components/home/left/style.css
+++ b/frontend/src/components/home/left/style.css
@@ -107,6 +107,7 @@
     border-radius: 10px;
     font-size: 14px;
     font-weight: 500;
+    color: var(--color-primary);
 }
 
 .shortcut_item img {
