--- a/frontend/src/components/post/style.css
+++ b/frontend/src/components/post/style.css
@@ -40,6 +40,7 @@
   font-size: 14px;
   font-weight: 600;
   line-height: 19px;
+  color: var(--color-primary);
 }
 .updated_p {
   color: var(--color-secondary);
